# cord-path

./: Cargo.toml  README.md  build.rs  out.csv  points.csv
cuda/: kernel.cu
src/: main.rs
