[package]
name = "cord-path"
version = "1.0.0"
edition = "2021"
build = "build.rs"
description = "2 dimensional coordinate based path finder"
readme = "README.md"
repository = "https://github.com/HardBoss07/cord-path"
license = "AGPL-3.0-only"
keywords = ["path-finder"]
categories = ["command-line-utilities", "mathematics"]
exclude = ["*.csv"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
cc = "1.0"